# agentcontainers

./: .gitignore  .mise.toml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  integration.yml  release-please.yml  release.yml  rust.yml
cmd/agentcontainer-redteam-codex/: Dockerfile  main.go
docs/: astro.config.mjs
docs/src/content/docs/concepts/: enforcement.md  threat-model.md
docs/src/content/docs/guides/: org-policy.md
docs/src/content/docs/project/: agent-ecosystem-spikes.md  long-range-roadmap.md  roadmap.md
docs/src/content/docs/reference/: cli.md
enforcer/: Cargo.toml  Dockerfile  Dockerfile.test
enforcer/agentcontainer-common/src/: events.rs  maps.rs  policy.rs
enforcer/agentcontainer-common/tests/: events_test.rs  maps_test.rs
enforcer/agentcontainer-ebpf/src/: lib.rs  maps.rs
enforcer/agentcontainer-ebpf/src/lsm/: bprm_check.rs  dup_check.rs  file_open.rs  mod.rs
enforcer/agentcontainer-ebpf/src/network/: bind.rs  connect.rs  mod.rs  sendmsg.rs
enforcer/agentcontainer-ebpf/src/process/: exit.rs  fork.rs  memfd.rs  mod.rs
enforcer/agentcontainer-enforcer/: Cargo.toml
enforcer/agentcontainer-enforcer/proto/: enforcer.proto
enforcer/agentcontainer-enforcer/src/: bpf.rs  events.rs  grpc.rs  policy.rs
enforcer/agentcontainer-enforcer/tests/: bpf_integration.rs  grpc_integration.rs
enforcer/deploy/: bpf-integration-job.yaml
examples/aider/: Dockerfile  README.md  agentcontainer.json
examples/claude-code/: Dockerfile  README.md  agentcontainer.json
examples/codex/: Dockerfile  README.md  agentcontainer.json
examples/goose/: Dockerfile  README.md  agentcontainer.json
examples/opencode/: Dockerfile  README.md  agentcontainer.json
examples/org-policy/: README.md  policy.json
internal/adversarial/: harness.go  harness_test.go
internal/approval/: broker.go  broker_test.go  manager.go
internal/cli/: dojo.go  dojo_test.go  exec.go  exec_test.go  learn.go  learn_test.go  lock.go  lock_test.go  policy_channel.go  policy_channel_test.go  root.go  run.go  run_test.go  verify.go
internal/config/: config.go  config_test.go  lockfile.go  lockfile_test.go
internal/container/: docker.go  docker_test.go  runtime.go  termios_bsd.go  termios_linux.go
internal/dojo/: dojo.go  dojo_test.go
internal/enforcement/: detect.go  detect_test.go  grpc.go
internal/enforcerapi/: enforcer.pb.go  enforcer_grpc.pb.go
internal/integration/: adversarial_test.go
internal/oci/: fetch.go  fetch_test.go
internal/orgpolicy/: runtime_policy.go  runtime_policy_test.go
internal/policy/: resolve_test.go
internal/sandbox/: policy_test.go
internal/sidecar/: sidecar.go  sidecar_test.go
internal/signing/: provenance_generate_test.go
internal/skillbom/: drift.go  generator.go
test/adversarial/: README.md  prompts.json  scenarios.json
