[workspace]
resolver = "2"
members = [
    "agentcontainer-common",
    "agentcontainer-ebpf",
    "agentcontainer-enforcer",
    "xtask",
]
# agentcontainer-ebpf targets bpfel-unknown-none (BPF) and cannot be compiled for the host.
# It is included in `members` so `cargo build --package agentcontainer-ebpf` resolves (needed
# by aya-build in agentcontainer-enforcer's build.rs), but excluded from `default-members` so
# `cargo build` / `cargo test` don't attempt to compile it for the host target.
default-members = [
    "agentcontainer-common",
    "agentcontainer-enforcer",
    "xtask",
]

[workspace.dependencies]
agentcontainer-common = { path = "agentcontainer-common" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring"] }
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = "0.1"
aya = "0.13"
aya-log = "0.2"
siphasher = { version = "1", default-features = false }
tonic-health = "0.14"
serde_json = "1"
# WASM Component hosting
wasmtime = { version = "44", features = ["component-model", "cranelift", "runtime", "parallel-compilation"] }
wasmtime-wasi = "44"
# OpenTelemetry + OpenInference
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }
tracing-opentelemetry = "0.32"
openinference-semantic-conventions = "0.1"
openinference-instrumentation = "0.1"
